Simplified maps location

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.data.mongodb.database=navicell
 spring.data.mongodb.username=root
 spring.data.mongodb.password=example
 spring.data.mongodb.authentication-database = admin
-spring.resources.static-locations=file:/var/navicell/src/main/resources/static/,file:/var/navicell/upload-dir/
+spring.resources.static-locations=file:/var/navicell/src/main/resources/static/
+storage.location=/var/navicell/site/docroot/navicell/maps/
