Increase max upload size to 100MB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.data.mongodb.password=example
 spring.data.mongodb.authentication-database = admin
 spring.resources.static-locations=file:/var/navicell/src/main/resources/static/
 storage.location=/var/navicell/site/docroot/navicell/maps/
+
+# Increasing max file upload. 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
