--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,14 @@ spring.data.mongodb.username=root
 spring.data.mongodb.password=example
 spring.data.mongodb.authentication-database = admin
 spring.resources.static-locations=file:/var/navicell/src/main/resources/static/
+
+# Maps directory
 storage.location=/var/navicell/site/docroot/navicell/maps/
 
 # Increasing max file upload. 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+#logging
+logging.level.org.springframework.data=debug
+logging.level.=error
