Added session authentification, users accounts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ storage.location=/var/navicell/site/docroot/navicell/maps/
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
+# Increasing number of filters
+spring.security.filter.order=10
+
 #logging
 logging.level.org.springframework.data=debug
 logging.level.=error
