--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,13 @@
             <version>2.6</version>
         </dependency>
 		
-		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-collections4</artifactId>
+    <version>4.4</version>
+</dependency>
+
 		<dependency>
             <!-- build from libsbgn repo
                  in org.sbgn/
