--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
     <artifactId>commons-collections4</artifactId>
     <version>4.4</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.12.0</version>
+</dependency>
 
 		<dependency>
             <!-- build from libsbgn repo
