Improved UI, Async upload, Option to give own image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ server.port=8080
 sbgn-render.location = /var/navicell/src/main/resources/index.html
 # Here is an ip white list for the chromium driver. Right now empty which allows everything
 sbgn-render.whiteListedIps =
+
+
+spring.data.elasticsearch.cluster-name=navicell-elasticsearch
+spring.data.elasticsearch.cluster-nodes=navicell-elasticsearch
