--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -21,7 +21,7 @@
     "bootstrap": "3.3.7",
     "chise": "^3.0.0",
     "chroma-js": "^1.3.4",
-    "cytoscape": "github:iVis-at-Bilkent/cytoscape.js#master",
+    "cytoscape": "github:iVis-at-Bilkent/cytoscape.js#4f1cdf0be034b0c5865471d3e073a5afe8de0209",
     "cytoscape-autopan-on-drag": "2.2.1",
     "cytoscape-clipboard": "2.2.1",
     "cytoscape-context-menus": "3.1.0",
